Ya esta el HEADER y el ARTICLE en HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img src="./Recursos/images.jfif" alt="">
+        </div>
+        <div>
+            <h1>Mi Sitio WEB Cliente para el curso de Programación WEB</h1>
+        </div>
+    </header>
+    <article>
+        <div>
+            <div>
+                <img src="./Recursos/usuario.jpg" alt="">
+            </div>
+            <div>
+                <input type="Usuario:">
+                <input type="Contraseña:">
+                <button>Ingresar</button>
+            </div>
+        </div>
+        <div>
+            <h2>Aquí va los DATOS</h2>
+            <table>
+                <thead>
+                    <th></th>
+                    <th></th>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+    </article>
+    <footer>
+        
+    </footer>
 </body>
 </html>
