Ya esta el Header, el Article y el Footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
         </div>
     </article>
     <footer>
-        
+        <div>
+            <img src="./Recursos/jltrmr.jpg" alt="">
+        </div>
+        <div>
+            <h3>JLTorresR</h3>
+            <h3>jose.tr1@tlajomulco.tecnm.mx</h3>
+            <h3>89290047</h3>
+        </div>
+        <div>
+            <h3>Tecnológico Nacional de México</h3>
+            <h3>Campus Tlajomulco</h3>
+            <h3>Ingeniería en Sistemas Computacionales</h3>
+        </div>
     </footer>
 </body>
 </html>
