Agregamos los archivos CSS al proyecto

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="header__img">
             <img src="./Recursos/images.jfif" alt="">
         </div>
-        <div>
+        <div class="header__title">
             <h1>Mi Sitio WEB Cliente para el curso de Programación WEB</h1>
         </div>
     </header>
     <article>
-        <div>
-            <div>
-                <img src="./Recursos/usuario.jpg" alt="">
+        <div class="article__login">
+            <div class="article__login__img">
+                <img src="./Recursos/usuario.jpg" alt="Nombre Usuario">
             </div>
-            <div>
-                <input type="Usuario:">
-                <input type="Contraseña:">
+            <div class="article__login__input">
+                <input type="text" placeholder="usuario">
+                <input type="password" placeholder="contraseña">
                 <button>Ingresar</button>
             </div>
         </div>
-        <div>
+        <div class="article__datos">
             <h2>Aquí va los DATOS</h2>
             <table>
                 <thead>
@@ -42,15 +42,15 @@
         </div>
     </article>
     <footer>
-        <div>
-            <img src="./Recursos/jltrmr.jpg" alt="">
+        <div class="footer__img">
+            <img src="./Recursos/jltrmr.jpg" alt="JLTorresR">
         </div>
-        <div>
+        <div class="footer__datosPersonales">
             <h3>JLTorresR</h3>
             <h3>jose.tr1@tlajomulco.tecnm.mx</h3>
             <h3>89290047</h3>
         </div>
-        <div>
+        <div class="footer__datosLaborales">
             <h3>Tecnológico Nacional de México</h3>
             <h3>Campus Tlajomulco</h3>
             <h3>Ingeniería en Sistemas Computacionales</h3>
